--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" > </meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> </meta>
     <title>CV</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1>This is a Heading</h1>
+      <p>This is a paragraph.</p>
+    </header>
     <main></main>
     <footer></footer>
   </body>
