--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="CV" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta name="author" content="Oksana Bebesh" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"></meta>
+    <meta name="description" content="CV"></meta>
+    <meta name="keywords" content="HTML, CSS, JavaScript"></meta>
+    <meta name="author" content="Oksana Bebesh"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
     <title>CV</title>
   </head>
   <body>
