fix: remove validate errors

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>CV Aksana Bebesh</title>
   </head>
   <body>
@@ -143,7 +143,7 @@
               src="./images/github-logo.svg"
               alt="Git hub icon"
               width="48px"
-            />
+            >
           </a>
         </div>
       </contacts>
@@ -151,7 +151,7 @@
     <main class="wrapper">
       <div class="skills-block">
         <div>
-          <img class="photo" src="./images/photo-cv.jpg" width="90" alt="" />
+          <img class="photo" src="./images/photo-cv.jpg" width="90" alt="" >
           <div><h2>Aksana Bebesh &#127799;</h2></div>
         </div>
         <div class="skills">
@@ -179,84 +179,84 @@
                 src="./images/skills/html-5-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/mysql-logo-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/php3-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/symfony-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/node-js-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/postgresql-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/react-javascript-js-framework-facebook-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/sass-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/git-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/css-file-type-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/js-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/wordpress-svgrepo-com.svg"
                 alt=""
                 width="100"
-              />
+              >
             </div>
           </div>
           <!-- If we need pagination -->
