fix: remove validate errors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="wrapper">
       <h1 class="hidden">This is a Heading</h1>
-      <contacts>
+      <nav>
         <div class="contact-item">
           <a class="link" href="https://www.linkedin.com/in/oksana-bebesh1984/">
             <svg
@@ -119,7 +119,7 @@
         </div>
         <div class="contact-item">
           <a class="link" href="tel:+48780003744">
-            <?xml version="1.0" encoding="utf-8"?>
+            <!-- <?xml version="1.0" encoding="utf-8"?> -->
             <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
             <svg
               fill="#000000"
@@ -146,7 +146,7 @@
             >
           </a>
         </div>
-      </contacts>
+      </nav>
     </header>
     <main class="wrapper">
       <div class="skills-block">
@@ -331,7 +331,7 @@
           src="./images/rs_school_js.svg"
           alt="logo RSSchool"
           width="66"
-        />
+        >
       </a>
       <a class="link" href="https://github.com/OksanaBebesh">
         <img
@@ -339,7 +339,7 @@
           src="./images/git_hub.jpg"
           alt="Git hub icon"
           width="36"
-        />
+        >
       </a>
       <a class="link" href="https://rs.school/js/"> The Rolling Scopes JS </a>
       <span>&copy;2023</span>
@@ -352,7 +352,7 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    />
+    >
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
 
