--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               class="git-hub"
               src="./images/github-logo.svg"
               alt="Git hub icon"
-              width="48px"
+              width="48"
             >
           </a>
         </div>
