refactor: clear code

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./styles/style.css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>CV Aksana Bebesh</title>
   </head>
   <body>
@@ -143,16 +143,15 @@
               src="./images/github-logo.svg"
               alt="Git hub icon"
               width="48"
-            >
+            />
           </a>
         </div>
       </nav>
     </header>
     <main class="wrapper">
-
       <div class="skills-block">
         <div>
-          <img class="photo" src="./images/photo-cv.jpg" width="90" alt="" >
+          <img class="photo" src="./images/photo-cv.jpg" width="90" alt="" />
           <div><h2>Aksana Bebesh &#127799;</h2></div>
         </div>
         <div class="skills">
@@ -172,8 +171,8 @@
           </ul>
           <h3>Languages</h3>
           <ul>
-            <li>English B1 </li>
-            <li>Russian native </li>
+            <li>English B1</li>
+            <li>Russian native</li>
           </ul>
         </div>
         <div class="swiper">
@@ -185,87 +184,86 @@
                 src="./images/skills/html-5-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/mysql-logo-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/php3-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/symfony-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/node-js-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/postgresql-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/react-javascript-js-framework-facebook-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/sass-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/git-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/css-file-type-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/js-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/wordpress-svgrepo-com.svg"
                 alt=""
                 width="100"
-              >
+              />
             </div>
           </div>
-          <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
 
           <div class="swiper-button-prev"></div>
@@ -274,8 +272,13 @@
       </div>
       <div class="profile">
         <h3>Brief Profile</h3>
-<p>Full stack developer with 2.5 years of experience in building web applications based on web technologies: PHP(Symfony, Laravel), CMS (WordPress), MySQL(procedures, triggers), PostgreSQL,
-AWS SQS, HTML5, CSS, JavaScript, React, NodeJS, Familiar with Docker (docker compose), Git (Github), Jira.</p>
+        <p>
+          Full stack developer with 2.5 years of experience in building web
+          applications based on web technologies: PHP(Symfony, Laravel), CMS
+          (WordPress), MySQL(procedures, triggers), PostgreSQL, AWS SQS, HTML5,
+          CSS, JavaScript, React, NodeJS, Familiar with Docker (docker compose),
+          Git (Github), Jira.
+        </p>
       </div>
       <div class="experience-block">
         <h3>Project experience</h3>
@@ -335,8 +338,8 @@ AWS SQS, HTML5, CSS, JavaScript, React, NodeJS, Familiar with Docker (docker com
         </div>
       </div>
       <div class="code-examples">
-<h3>Examples of code</h3>
-<pre>
+        <h3>Examples of code</h3>
+        <pre>
   <b>JavaScript</b>
 StorageModule.groupStatesUpdate = () => {  
     const data = StorageModule.getData();
@@ -355,8 +358,9 @@ StorageModule.groupStatesUpdate = () => {
                     });
     StorageModule.setData(newdata);
 }
-</pre>
-<pre>
+</pre
+        >
+        <pre>
   <b>SQL Query For finding errors with helth cards, when cards have two patients</b>
   SELECT DISTINCT  t.PHN,t.PatientLastName,t.PatientFirstName,t.Birthdate  
     FROM tmp_migr.tblpatient t
@@ -375,7 +379,7 @@ StorageModule.groupStatesUpdate = () => {
           src="./images/rs_school_js.svg"
           alt="logo RSSchool"
           width="66"
-        >
+        />
       </a>
       <a class="link" href="https://github.com/OksanaBebesh">
         <img
@@ -383,12 +387,11 @@ StorageModule.groupStatesUpdate = () => {
           src="./images/git_hub.jpg"
           alt="Git hub icon"
           width="36"
-        >
+        />
       </a>
       <a class="link" href="https://rs.school/js/"> The Rolling Scopes JS </a>
       <span>&copy;2023</span>
     </footer>
-    <!-- <script src="./js/swiper.js"></script> -->
     <script
       src="https://kit.fontawesome.com/2738d89d62.js"
       crossorigin="anonymous"
@@ -396,15 +399,12 @@ StorageModule.groupStatesUpdate = () => {
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    >
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
+    />
 
     <script type="module">
       import Swiper from "https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.mjs";
 
       const swiper = new Swiper(".swiper", {
-        // Optional parameters
         direction: "horizontal",
         loop: true,
         autoplay: {
@@ -412,35 +412,25 @@ StorageModule.groupStatesUpdate = () => {
         },
         slidesOffsetBefore: 100,
 
-        // If we need pagination
         pagination: {
           el: ".swiper-pagination",
         },
 
-        // Navigation arrows
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
         },
-
-        // // And if we need scrollbar
-        // scrollbar: {
-        //   el: ".swiper-scrollbar",
-        // },
       });
 
       const swiperExperience = new Swiper(".swiper-experience", {
-        // Optional parameters
         direction: "horizontal",
         loop: true,
         slidesOffsetBefore: 165,
 
-        // If we need pagination
         pagination: {
           el: ".swiper-pagination2",
         },
 
-        // Navigation arrows
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
