refactor: add favicon img

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.svg" />
     <title>CV Aksana Bebesh</title>
   </head>
   <body>
@@ -30,7 +31,7 @@
           </a>
         </div>
         <div class="contact-item">
-          <a class="link" href="skype:live:kseniia_25?call">
+          <a class="link" href="skype:live:kseniia_25?chat">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 48 48"
