feat: add top href script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CV Aksana Bebesh</title>
   </head>
   <body>
-    <a href="#top"><div class="top-href">&#x2191;</div></a>
+    <a href="#top"><div id="btn-to-top" class="top-href">&#x2191;</div></a>
     <header class="wrapper" id="top">
       <h1 class="hidden">This is a Heading</h1>
       <nav>
@@ -524,5 +524,6 @@
       });
     </script>
     <script src="./js/tab.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
