--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.svg" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.svg">
     <title>CV Aksana Bebesh</title>
   </head>
   <body>
@@ -409,7 +409,7 @@
               href="https://rolling-scopes-school.github.io/oksanabebesh-JSFEPRESCHOOL2023Q2/js-30-image-gallery/"
             >
               <img src="./images/img-projects/gallery.png" alt=""
-            /></a>
+            ></a>
           </div>
           <div class="project-pet">
             <a
@@ -418,7 +418,7 @@
               href="https://rolling-scopes-school.github.io/oksanabebesh-JSFEPRESCHOOL2023Q2/js30-memo-game/"
             >
               <img src="./images/img-projects/memo-game.png" alt=""
-            /></a>
+            ></a>
           </div>
           <div class="project-pet">
             <a
@@ -426,7 +426,7 @@
               target="_blank"
               href="https://oksanabebesh.github.io/library2023/library/"
               ><img src="./images/img-projects/library.png" alt=""
-            /></a>
+            ></a>
           </div>
 
           <div class="project-pet">
@@ -435,7 +435,7 @@
               target="_blank"
               href="https://oksanabebesh.github.io/LearningFridayLive/dist/"
               ><img src="./images/img-projects/productly.png" alt=""
-            /></a>
+            ></a>
           </div>
 
           <div class="project-pet">
@@ -444,7 +444,7 @@
               target="_blank"
               href="https://oksanabebesh.github.io/css-projects-collections/JSFE2021Q3-museum/museum"
               ><img src="./images/img-projects/museum.png" alt=""
-            /></a>
+            ></a>
           </div>
 
           <div class="project-pet">
@@ -453,7 +453,7 @@
               target="_blank"
               href="https://oksanabebesh.github.io/css-projects-collections/JSFE2021Q3-momentum/momentum/"
               ><img src="./images/img-projects/momentum.png" alt=""
-            /></a>
+            ></a>
           </div>
         </div>
       </div>
@@ -465,7 +465,7 @@
           src="./images/rs_school_js.svg"
           alt="logo RSSchool"
           width="66"
-        />
+        >
       </a>
       <a class="link" href="https://github.com/OksanaBebesh">
         <img
@@ -473,7 +473,7 @@
           src="./images/git_hub.jpg"
           alt="Git hub icon"
           width="36"
-        />
+        >
       </a>
       <a class="link" href="https://rs.school/js/"> The Rolling Scopes JS </a>
       <span>&copy;2023</span>
@@ -502,10 +502,6 @@
           el: ".swiper-pagination",
         },
 
-        // navigation: {
-        //   nextEl: ".swiper-button-next",
-        //   prevEl: ".swiper-button-prev",
-        // },
       });
 
       const swiperExperience = new Swiper(".swiper-experience", {
