fix: fix validator errors. add alt attr

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <main class="wrapper">
       <div class="skills-block" id="skills">
         <div>
-          <img class="photo" src="./images/photo-cv.jpg" width="90" alt="" >
+          <img class="photo" src="./images/photo-cv.jpg" width="90" alt="photo" >
           <div><h2>Aksana Bebesh &#127799;</h2></div>
         </div>
         <div class="skills">
@@ -191,84 +191,84 @@
             <div class="swiper-slide">
               <img
                 src="./images/skills/html-5-svgrepo-com.svg"
-                alt=""
+                alt="html-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/mysql-logo-svgrepo-com.svg"
-                alt=""
+                alt="mysql-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/php3-svgrepo-com.svg"
-                alt=""
+                alt="php-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/symfony-svgrepo-com.svg"
-                alt=""
+                alt="symfony-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/node-js-svgrepo-com.svg"
-                alt=""
+                alt="node-js-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/postgresql-svgrepo-com.svg"
-                alt=""
+                alt="postgresql-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/react-javascript-js-framework-facebook-svgrepo-com.svg"
-                alt=""
+                alt="react-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/sass-svgrepo-com.svg"
-                alt=""
+                alt="sass-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/git-svgrepo-com.svg"
-                alt=""
+                alt="git-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/css-file-type-svgrepo-com.svg"
-                alt=""
+                alt="css-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/js-svgrepo-com.svg"
-                alt=""
+                alt="js-svgrepo-icon"
                 width="100"
               >
             </div>
             <div class="swiper-slide">
               <img
                 src="./images/skills/wordpress-svgrepo-com.svg"
-                alt=""
+                alt="wordpress-icon"
                 width="100"
               >
             </div>
@@ -408,7 +408,7 @@
               target="_blank"
               href="https://rolling-scopes-school.github.io/oksanabebesh-JSFEPRESCHOOL2023Q2/js-30-image-gallery/"
             >
-              <img src="./images/img-projects/gallery.png" alt=""
+              <img src="./images/img-projects/gallery.png" alt="gallery-icon"
             ></a>
           </div>
           <div class="project-pet">
@@ -417,7 +417,7 @@
               target="_blank"
               href="https://rolling-scopes-school.github.io/oksanabebesh-JSFEPRESCHOOL2023Q2/js30-memo-game/"
             >
-              <img src="./images/img-projects/memo-game.png" alt=""
+              <img src="./images/img-projects/memo-game.png" alt="memo-game-icon"
             ></a>
           </div>
           <div class="project-pet">
@@ -425,7 +425,7 @@
               title="library"
               target="_blank"
               href="https://oksanabebesh.github.io/library2023/library/"
-              ><img src="./images/img-projects/library.png" alt=""
+              ><img src="./images/img-projects/library.png" alt="library-icon"
             ></a>
           </div>
 
@@ -434,7 +434,7 @@
               title="productly"
               target="_blank"
               href="https://oksanabebesh.github.io/LearningFridayLive/dist/"
-              ><img src="./images/img-projects/productly.png" alt=""
+              ><img src="./images/img-projects/productly.png" alt="productly-icon"
             ></a>
           </div>
 
@@ -443,7 +443,7 @@
               title="museum"
               target="_blank"
               href="https://oksanabebesh.github.io/css-projects-collections/JSFE2021Q3-museum/museum"
-              ><img src="./images/img-projects/museum.png" alt=""
+              ><img src="./images/img-projects/museum.png" alt="museum-icon"
             ></a>
           </div>
 
@@ -452,7 +452,7 @@
               title="museum"
               target="_blank"
               href="https://oksanabebesh.github.io/css-projects-collections/JSFE2021Q3-momentum/momentum/"
-              ><img src="./images/img-projects/momentum.png" alt=""
+              ><img src="./images/img-projects/momentum.png" alt="momentum-icon"
             ></a>
           </div>
         </div>
